apps/data-science/ollama/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: ollama
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Local Chatbot UI
    gethomepage.dev/group: Data Science
    gethomepage.dev/icon: https://openwebui.com/favicon.png
    gethomepage.dev/name: Open WebUI
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: chat.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port: 
                  number: 80
  tls:
    - hosts:
        - chat.internal
      secretName: homelab-tls
